# Agent-v0

./: .gitignore  Cargo.toml  Description.md  Makefile  README.md  RELEASE.md  Security.md  file.tmp  go.mod  package-lock.json  package.json
config/: config.example.yaml
go/net-probe/: go.mod
python/forensics-service/: requirements.txt
python/osint-utils/: breach_lookup.py  requirements.txt
rust/cyplex-audit/: Cargo.toml
rust/cyplex-audit/src/: chain.rs  log_entry.rs  writer.rs
rust/cyplex-crypto/: Cargo.toml
rust/cyplex-crypto/src/: hmac.rs  rng.rs
rust/cyplex-ipc/: Cargo.toml
rust/cyplex-ipc/src/: protocol.rs  session_token.rs
rust/cyplex-keystore/: Cargo.toml
rust/cyplex-keystore/src/: crypto.rs  keystore.rs  lib.rs
rust/cyplex-permissions/: Cargo.toml
rust/cyplex-permissions/src/: lib.rs  network_guard.rs
rust/cyplex-sandbox/: Cargo.toml
rust/cyplex-sandbox/src/: bubblewrap.rs  error.rs  lib.rs  macos_sandbox.rs  path_guard.rs
scripts/: build-go.sh  dev-setup.sh  install-agent-v0.sh  install-cyplex.sh  install.sh  remote-install.sh
src/agents/: base_agent.ts  code_agent.ts  exploit_research_agent.ts  forensics_agent.ts  monitor_agent.ts  osint_analyst_agent.ts  recon_agent.ts  report_agent.ts  scribe_agent.ts  threat_intel_agent.ts
src/cli/: cli.ts  ipc_client.ts  migrate_db.ts  setup_wizard.ts  uninstaller.ts  updater.ts
src/daemon/: daemon.ts  daemon_main.ts  process_manager.ts
src/gateway/: cost_tracker.ts  gateway.ts  local_model_adapter.ts  openai_adapter.ts
src/orchestrator/: agentic.ts  index.html  memory_manager.ts  migrate_db.ts  server.ts  task_registry.ts
src/security/: command_validator.ts  keystore_bridge.ts  lsp_bridge.ts  permission_bridge.ts  sandbox_bridge.ts  secret_redactor.ts
src/sessions/: artifact_api.ts  session_manager.ts
src/skills/: skill_intake.ts  skill_quarantine.ts
src/tools/: agent_toolkit.ts  tool_runtime.ts
src/types/: provider_config.ts
src/utils/: platform.ts
src/web/: server.ts
tools/: QueryEngine.ts  agent-v0-bridge.ts  commands.ts  context.ts  history.ts  interactiveHelpers.tsx  main.tsx  query.ts  setup.ts  tasks.ts  tools.ts  tsconfig.json
tools/bootstrap/: state.ts
tools/bridge/: bridgeEnabled.ts  bridgeMain.ts  envLessBridgeConfig.ts  initReplBridge.ts  remoteBridgeCore.ts  trustedDevice.ts
tools/buddy/: CompanionSprite.tsx  companion.ts  prompt.ts  useBuddyNotification.tsx
tools/cli/: print.ts  structuredIO.ts  update.ts
tools/commands/: brief.ts  init.ts  insights.ts  install.tsx  review.ts  statusline.tsx  ultraplan.tsx
tools/compat/: bun-bundle-shim.ts  index.ts
tools/components/: AutoUpdaterWrapper.tsx  BypassPermissionsModeDialog.tsx  ClaudeInChromeOnboarding.tsx  ClaudeMdExternalIncludesDialog.tsx  ConsoleOAuthFlow.tsx  ContextVisualization.tsx  Feedback.tsx  IdeOnboardingDialog.tsx  Message.tsx  Messages.tsx  ModelPicker.tsx  Onboarding.tsx  OutputStylePicker.tsx  ResumeTask.tsx  Spinner.tsx  Stats.tsx  StatusLine.tsx  TeleportError.tsx  TeleportRepoMismatchDialog.tsx  TextInput.tsx  ThemePicker.tsx  TokenWarning.tsx  WorkflowMultiselectDialog.tsx
tools/constants/: betas.ts  github-app.ts  oauth.ts  product.ts  prompts.ts  system.ts  tools.ts
tools/coordinator/: coordinatorMode.ts
tools/entrypoints/: agentSdkTypes.ts  cli.tsx  sandboxTypes.ts
tools/hooks/: useAwaySummary.ts  useCanUseTool.tsx  useDiffInIDE.ts  useGlobalKeybindings.tsx  useHistorySearch.ts  useReplBridge.tsx  useVoice.ts  useVoiceIntegration.tsx
tools/keybindings/: defaultBindings.ts  reservedShortcuts.ts  schema.ts
tools/memdir/: findRelevantMemories.ts  memdir.ts
tools/migrations/: resetAutoModeOptInForDefaultOffer.ts
tools/query/: stopHooks.ts
tools/screens/: Doctor.tsx  REPL.tsx  ResumeConversation.tsx
tools/services/: notifier.ts  rateLimitMessages.ts  voice.ts  voiceStreamSTT.ts
tools/state/: AppState.tsx
tools/types/: ids.ts  permissions.ts
tools/utils/: analyzeContext.ts  attachments.ts  attribution.ts  autoModeDenials.ts  betas.ts  (+44 more)
(+236 files in other folders)
