[package]
name = "cyplex-audit"
version = "0.1.0"
edition = "2021"
description = "Hash-chained audit log for Agent Cyplex"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
tokio = { version = "1.51", features = ["fs", "io-util", "sync"] }
subtle = "2.6"
