[package]
name = "cyplex-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon-CLI inter-process communication layer for Agent Cyplex"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bytes = "1.11"
subtle = "2.6"
