[package]
name = "cyplex-keystore"
version = "0.1.0"
edition = "2021"
description = "Encrypted secret storage engine for Agent Cyplex"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
base64 = "0.22.1"
