[package]
name = "cyplex-permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-agent permission enforcement engine for Agent Cyplex"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = "0.3.3"
