[package]
name = "cyplex-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent process sandboxing for Agent v0 (Linux + macOS)"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["sched", "signal", "process"] }
libc = "0.2.184"
